@@ -5,27 +5,32 @@ import com.prontudigital.schedule_service.dto.AppointmentRequestDTO;
 import com.prontudigital.schedule_service.dto.AppointmentResponseDTO;
 import com.prontudigital.schedule_service.dto.AppointmentViewDTO;
 import com.prontudigital.schedule_service.dto.UserInfoDTO;
-import com.prontudigital.schedule_service.enums.AppointmentStatus;
-import com.prontudigital.schedule_service.exception.*;
 import com.prontudigital.schedule_service.entity.Appointment;
 import com.prontudigital.schedule_service.entity.TimeBlock;
+import com.prontudigital.schedule_service.enums.AppointmentStatus;
+import com.prontudigital.schedule_service.enums.AppointmentType;
+import com.prontudigital.schedule_service.exception.*;
 import com.prontudigital.schedule_service.repository.AppointmentRepository;
 import com.prontudigital.schedule_service.repository.TimeBlockRepository;
 import com.prontudigital.schedule_service.service.AppointmentService;
 import com.prontudigital.schedule_service.service.validation.UserValidationService;
-import feign.FeignException;
+import com.prontudigital.schedule_service.utils.AppointmentUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.*;
+import java.time.DayOfWeek;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.TemporalAdjusters;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
+
+import static com.prontudigital.schedule_service.utils.AppointmentUtil.convertToDTO;
 
 @Service
 @RequiredArgsConstructor
@@ -36,37 +41,91 @@ public class AppointmentServiceImpl implements AppointmentService {
     private final TimeBlockRepository timeBlockRepository;
     private final UserServiceClient userServiceClient;
     private final UserValidationService userValidationService;
+    private final AppointmentUtil util;
 
 
-    public AppointmentResponseDTO convertToDTO(Appointment appointment) {
-        return new AppointmentResponseDTO(
-                appointment.getId(),
-                appointment.getStartDateTime(),
-                appointment.getEndDateTime(),
-                appointment.getProfessionalUuid(),
-                appointment.getPatientUuid(),
-                appointment.getType(),
-                appointment.getStatus(),
-                appointment.getNotes(),
-                appointment.getCreatedAt()
-        );
+
+    private void validateSchedulePermission(AppointmentRequestDTO request, UUID currentUserUuid, String currentUserRole) {
+        if ("ADMIN".equals(currentUserRole)) {
+            return;
+        }
+        if ("PATIENT".equals(currentUserRole)) {
+            if (!request.patientUuid().equals(currentUserUuid)) {
+                throw new UnauthorizedException("Paciente só pode criar agendamentos para si mesmo");
+            }
+            return;
+        }
+        if ("PROFESSIONAL".equals(currentUserRole)) {
+            if (!request.professionalUuid().equals(currentUserUuid)) {
+                throw new UnauthorizedException("Profissional só pode criar agendamentos para si mesmo");
+            }
+            return;
+        }
+        throw new UnauthorizedException("Usuário não autorizado a criar agendamentos");
     }
 
-    public AppointmentViewDTO convertToViewDTO(Appointment appointment) {
-        String patientName = "patientName";//patientServiceClient.getPatientName(appointment.getPatientId());
-        String professionalName = "professionalName";//professionalServiceClient.getProfessionalName(appointment.getProfessionalId());
+    private boolean hasPermissionToModify(Appointment appointment, UUID currentUserUuid, String currentUserRole) {
+        if ("ADMIN".equals(currentUserRole)) {
+            return true;
+        }
+        if ("PATIENT".equals(currentUserRole)) {
+            return appointment.getPatientUuid().equals(currentUserUuid);
+        }
+        if ("PROFESSIONAL".equals(currentUserRole)) {
+            return appointment.getProfessionalUuid().equals(currentUserUuid);
+        }
+        return false;
+    }
 
-        return new AppointmentViewDTO(
-                appointment.getId(),
-                appointment.getStartDateTime(),
-                appointment.getEndDateTime(),
-                appointment.getProfessionalUuid(),
-                appointment.getPatientUuid(),
-                appointment.getType(),
-                appointment.getStatus(),
-                patientName,
-                professionalName
-        );
+    private boolean hasPermissionToView(Appointment appointment, UUID currentUserUuid, String currentUserRole) {
+        if ("ADMIN".equals(currentUserRole)) {
+            return true;
+        }
+        if ("PATIENT".equals(currentUserRole)) {
+            return appointment.getPatientUuid().equals(currentUserUuid);
+        }
+        if ("PROFESSIONAL".equals(currentUserRole)) {
+            return appointment.getProfessionalUuid().equals(currentUserUuid);
+        }
+        return false;
+    }
+
+    // ========== VALIDAÇÕES DE DISPONIBILIDADE ==========
+
+    private void validateFutureDateTime(LocalDateTime dateTime) {
+        if (dateTime.isBefore(LocalDateTime.now())) {
+            throw new InvalidAppointmentTimeException("Não é possível agendar para datas/horários passados");
+        }
+    }
+
+    private void validateProfessionalAvailability(UUID professionalUuid, LocalDateTime start, LocalDateTime end) {
+        List<TimeBlock> timeBlocks = timeBlockRepository.findConflictingTimeBlocks(professionalUuid, start, end);
+        if (!timeBlocks.isEmpty()) {
+            TimeBlock conflict = timeBlocks.get(0);
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
+            throw new TimeBlockConflictException(
+                    String.format("Horário indisponível. Profissional possui bloco de tempo conflitante: %s às %s. Motivo: %s",
+                            conflict.getStartDateTime().format(formatter),
+                            conflict.getEndDateTime().format(formatter),
+                            conflict.getReason())
+            );
+        }
+
+        List<Appointment> professionalConflicts = appointmentRepository
+                .findConflictingAppointmentsForProfessional(professionalUuid, start, end);
+        if (!professionalConflicts.isEmpty()) {
+            throw new ProfessionalNotAvailableException("Profissional já possui agendamento neste horário.");
+        }
+    }
+
+    private void validatePatientAvailability(UUID patientUuid, LocalDateTime start, LocalDateTime end) {
+        List<Appointment> patientConflicts = appointmentRepository
+                .findConflictingAppointmentsForPatient(patientUuid, start, end);
+        if (!patientConflicts.isEmpty()) {
+            throw new PatientNotAvailableException(
+                    "Paciente já possui agendamento neste horário. Agendamentos conflitantes: " + patientConflicts.size()
+            );
+        }
     }
 
     @Override
@@ -75,13 +134,41 @@ public class AppointmentServiceImpl implements AppointmentService {
         log.info("Tentando agendar consulta para paciente {} com profissional {} no horário {}",
                 request.patientUuid(), request.professionalUuid(), request.startDateTime());
 
+        UserInfoDTO user = userServiceClient.getCurrentUser();
+        // 1. Permissão
+        validateSchedulePermission(request,user.getUuid(), user.getRoles().getFirst());
+
+        // 2. Validações básicas
         userValidationService.validateUserExists(request.patientUuid());
         userValidationService.validateUserExists(request.professionalUuid());
-
         validateFutureDateTime(request.startDateTime());
+
+        // 3. Validação de disponibilidade
         validateProfessionalAvailability(request.professionalUuid(), request.startDateTime(), request.endDateTime());
         validatePatientAvailability(request.patientUuid(), request.startDateTime(), request.endDateTime());
 
+        // 4. Validação da regra de negócio Avaliação/Tratamento
+        if (request.type() == AppointmentType.TRATAMENTO) {
+            if (request.evaluationId() == null) {
+                throw new InvalidAppointmentRequestException("Tratamento deve estar associado a uma avaliação");
+            }
+            Appointment evaluation = appointmentRepository.findById(request.evaluationId())
+                    .orElseThrow(() -> new EvaluationNotFoundException("Avaliação não encontrada"));
+            if (evaluation.getType() != AppointmentType.AVALIACAO) {
+                throw new InvalidAppointmentRequestException("O appointment referenciado não é uma avaliação");
+            }
+            if (!evaluation.getPatientUuid().equals(request.patientUuid())) {
+                throw new InvalidAppointmentRequestException("O paciente do tratamento deve ser o mesmo da avaliação");
+            }
+            if (evaluation.getStatus() != AppointmentStatus.COMPLETED) {
+                throw new InvalidAppointmentRequestException("A avaliação deve estar concluída para agendar tratamentos");
+            }
+            // Opcional: verificar se o profissional é o mesmo? (não exigido pela regra)
+        } else if (request.type() == AppointmentType.AVALIACAO && request.evaluationId() != null) {
+            throw new InvalidAppointmentRequestException("Avaliação não pode ter evaluationId");
+        }
+
+        // 5. Criação do agendamento
         Appointment appointment = Appointment.builder()
                 .patientUuid(request.patientUuid())
                 .professionalUuid(request.professionalUuid())
@@ -90,33 +177,56 @@ public class AppointmentServiceImpl implements AppointmentService {
                 .endDateTime(request.endDateTime())
                 .status(AppointmentStatus.SCHEDULED)
                 .type(request.type())
-                .createdAt(LocalDateTime.now())
                 .build();
 
-        Appointment savedAppointment = appointmentRepository.save(appointment);
+        // Associa a avaliação se for tratamento
+        if (request.type() == AppointmentType.TRATAMENTO && request.evaluationId() != null) {
+            appointment.setEvaluation(appointmentRepository.getReferenceById(request.evaluationId()));
+        }
 
+        Appointment savedAppointment = appointmentRepository.save(appointment);
         log.info("Consulta agendada com sucesso. ID: {}", savedAppointment.getId());
 
         return convertToDTO(savedAppointment);
     }
 
-    public AppointmentResponseDTO cancelAppointment(Long appointmentId, UUID patientUuid)  {
-        Appointment appointment = appointmentRepository.findByIdAndPatientUuid(appointmentId, patientUuid)
+    @Override
+    @Transactional
+    public void cancelAppointment(Long appointmentId) {
+        Appointment appointment = appointmentRepository.findById(appointmentId)
                 .orElseThrow(() -> new AppointmentNotFoundException("Agendamento não encontrado"));
+        UserInfoDTO user = userServiceClient.getCurrentUser();
 
+        if (!hasPermissionToModify(appointment, user.getUuid(), user.getRoles().getFirst())) {
+            throw new UnauthorizedException("Usuário não autorizado a cancelar este agendamento");
+        }
 
         if (appointment.getStatus() == AppointmentStatus.CANCELLED) {
             throw new AppointmentAlreadyCancelledException("Agendamento já está cancelado");
         }
 
-        appointment.setStatus(AppointmentStatus.CANCELLED);
-        Appointment cancelledAppointment = appointmentRepository.save(appointment);
+        if (appointment.getStatus() == AppointmentStatus.COMPLETED) {
+            throw new InvalidAppointmentStateException("Agendamento concluído não pode ser cancelado");
+        }
 
-        return convertToDTO(cancelledAppointment);
+        appointment.setStatus(AppointmentStatus.CANCELLED);
+        Appointment cancelled = appointmentRepository.save(appointment);
+        convertToDTO(cancelled);
     }
 
     @Override
-    public List<AppointmentViewDTO> viewAppointments(UUID professionalUuid, LocalDate date, String viewType) {
+    public List<AppointmentViewDTO> viewAppointments(LocalDate date,
+                                                     String viewType) {
+        UserInfoDTO user = userServiceClient.getCurrentUser();
+        // Validação de permissão
+        if ("PATIENT".equals(user.getRoles().getFirst())) {
+            throw new UnauthorizedException("Paciente não pode visualizar agenda de profissional");
+        }
+        if ("PROFESSIONAL".equals(user.getRoles().getFirst()) ) {
+            throw new UnauthorizedException("Profissional só pode visualizar sua própria agenda");
+        }
+        // ADMIN pode qualquer
+
         LocalDateTime startDateTime;
         LocalDateTime endDateTime;
 
@@ -138,58 +248,50 @@ public class AppointmentServiceImpl implements AppointmentService {
         }
 
         List<Appointment> appointments = appointmentRepository
-                .findByProfessionalUuidAndStartDateTimeBetween(professionalUuid, startDateTime, endDateTime);
+                .findByProfessionalUuidAndStartDateTimeBetween(user.getUuid(), startDateTime, endDateTime);
 
         return appointments.stream()
-                .map(this::convertToViewDTO)
+                .map(util::convertToViewDTO)
                 .collect(Collectors.toList());
     }
 
+    @Override
+    public List<AppointmentViewDTO> getTreatmentsByEvaluation(Long evaluationId) {
+        Appointment evaluation = appointmentRepository.findById(evaluationId)
+                .orElseThrow(() -> new EvaluationNotFoundException("Avaliação não encontrada"));
 
-    private void validateFutureDateTime(LocalDateTime dateTime) {
-        if (dateTime.isBefore(LocalDateTime.now())) {
-            throw new InvalidAppointmentTimeException("Não é possível agendar para datas/horários passados");
+        UserInfoDTO user = userServiceClient.getCurrentUser();
+
+        if (!hasPermissionToView(evaluation, user.getUuid(), user.getRoles().getFirst())) {
+            throw new UnauthorizedException("Usuário não autorizado a ver tratamentos desta avaliação");
         }
+
+        List<Appointment> treatments = appointmentRepository.findByEvaluationId(evaluationId);
+        return treatments.stream().map(util::convertToViewDTO).collect(Collectors.toList());
     }
 
-    public void validateProfessionalAvailability(UUID professionalUuid, LocalDateTime start, LocalDateTime end) {
+    @Override
+    @Transactional
+    public void completeAppointment(Long appointmentId) {
+        Appointment appointment = appointmentRepository.findById(appointmentId)
+                .orElseThrow(() -> new AppointmentNotFoundException("Agendamento não encontrado"));
 
-        List<TimeBlock> timeBlocks = timeBlockRepository
-                .findConflictingTimeBlocks(professionalUuid, start, end);
+        UserInfoDTO user = userServiceClient.getCurrentUser();
 
-        if (!timeBlocks.isEmpty()) {
-            TimeBlock conflict = timeBlocks.get(0);
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
-
-            throw new TimeBlockConflictException(
-                    String.format(
-                            "Horário indisponível. Profissional possui bloco de tempo conflitante: %s às %s. Motivo: %s",
-                            conflict.getStartDateTime().format(formatter),
-                            conflict.getEndDateTime().format(formatter),
-                            conflict.getReason()
-                    )
-            );
+        if (!hasPermissionToModify(appointment, user.getUuid(), user.getRoles().getFirst())) {
+            throw new UnauthorizedException("Usuário não autorizado a concluir este agendamento");
         }
 
-        List<Appointment> professionalConflicts = appointmentRepository
-                .findConflictingAppointmentsForProfessional(professionalUuid, start, end);
-
-        if (!professionalConflicts.isEmpty()) {
-            throw new ProfessionalNotAvailableException(
-                    "Profissional já possui agendamento neste horário."
-            );
+        if (appointment.getStatus() == AppointmentStatus.COMPLETED) {
+            throw new AppointmentAlreadyCompletedException("Agendamento já está concluído");
         }
-    }
 
-    public void validatePatientAvailability(UUID patientUuid, LocalDateTime start, LocalDateTime end) {
-        List<Appointment> patientConflicts = appointmentRepository
-                .findConflictingAppointmentsForPatient(patientUuid, start, end);
-
-        if (!patientConflicts.isEmpty()) {
-            throw new PatientNotAvailableException(
-                    "Paciente já possui agendamento neste horário. " +
-                            "Agendamentos conflitantes: " + patientConflicts.size()
-            );
+        if (appointment.getStatus() == AppointmentStatus.CANCELLED) {
+            throw new InvalidAppointmentStateException("Agendamento cancelado não pode ser concluído");
         }
+
+        appointment.setStatus(AppointmentStatus.COMPLETED);
+        appointment.setCompletedAt(LocalDateTime.now());
+        appointmentRepository.save(appointment);
     }
 }
